logs/rPackages.SmartSVA_err.log
these 3 derivations will be built:
  /nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv
  /nix/store/w63nsr7b2vi3xdg1x7wkz1j6pn3lhhhi-r-sva-3.18.0.drv
  /nix/store/mxxzgi669nzsg1ywymncclc2s7l9hm0g-r-SmartSVA-0.1.3.drv
this path will be fetched (0.01 MiB download, 0.01 MiB unpacked):
  /nix/store/w7zpy6xjj2xx88d82ll4ih87fwysds68-SmartSVA_0.1.3.tar.gz
copying path '/nix/store/w7zpy6xjj2xx88d82ll4ih87fwysds68-SmartSVA_0.1.3.tar.gz' from 'https://cache.nixos.org'...
building '/nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv'...
Running phase: unpackPhase
unpacking source archive /nix/store/nasj7wpna8py8ck226zkspmk2br6niha-genefilter_1.52.1.tar.gz
source root is genefilter
setting SOURCE_DATE_EPOCH to timestamp 1453944267 of file genefilter/src/ttest.f
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘genefilter’ ...
** using staged installation
** libs
using C compiler: ‘clang version 16.0.6’
using Fortran compiler: ‘GNU Fortran (GCC) 13.3.0’
using C++ compiler: ‘clang version 16.0.6’
using SDK: ‘’
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/c++ -std=gnu++17 -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2   -c half_range_mode.cpp -o half_range_mode.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c init.c -o init.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c nd.c -o nd.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c pAUC.c -o pAUC.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowPAUCs.c -o rowPAUCs.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowttests.c -o rowttests.o
/nix/store/93i6w80axzmddh7kl97br2axr8al13vx-gfortran-wrapper-13.3.0/bin/gfortran  -fPIC  -g -O2  -c ttest.f -o ttest.o
nd.c:24:10: fatal error: 'S.h' file not found
#include "S.h"
         ^~~~~
1 error generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: nd.o] Error 1
make: *** Attente des tâches non terminées....
rowttests.c:172:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:172:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
rowttests.c:181:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:181:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
2 errors generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: rowttests.o] Error 1
half_range_mode.cpp:100:88: warning: format specifies type 'int' but the argument has type 'size_type' (aka 'unsigned long') [-Wformat]
    if (diag) Rprintf( "N = %i, N'' = %i, w = %.4f, |J| = %i\n", N, N_double_prime, w, J.size() );
                                                          ~~                           ^~~~~~~~
                                                          %zu
1 warning generated.
ERROR: compilation failed for package ‘genefilter’
* removing ‘/nix/store/qc1lzp0nljd6v9zjg6qmw8qll2c0v2s2-r-genefilter-1.52.1/library/genefilter’
error: builder for '/nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv' failed with exit code 1;
       last 25 log lines:
       > make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: nd.o] Error 1
       > make: *** Attente des tâches non terminées....
       > rowttests.c:172:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
       >               error(errmsg);
       >                     ^~~~~~
       > rowttests.c:172:14: note: treat the string as an argument to avoid this
       >               error(errmsg);
       >                     ^
       >                     "%s",
       > rowttests.c:181:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
       >               error(errmsg);
       >                     ^~~~~~
       > rowttests.c:181:14: note: treat the string as an argument to avoid this
       >               error(errmsg);
       >                     ^
       >                     "%s",
       > 2 errors generated.
       > make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: rowttests.o] Error 1
       > half_range_mode.cpp:100:88: warning: format specifies type 'int' but the argument has type 'size_type' (aka 'unsigned long') [-Wformat]
       >     if (diag) Rprintf( "N = %i, N'' = %i, w = %.4f, |J| = %i\n", N, N_double_prime, w, J.size() );
       >                                                           ~~                           ^~~~~~~~
       >                                                           %zu
       > 1 warning generated.
       > ERROR: compilation failed for package ‘genefilter’
       > * removing ‘/nix/store/qc1lzp0nljd6v9zjg6qmw8qll2c0v2s2-r-genefilter-1.52.1/library/genefilter’
       For full logs, run 'nix log /nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv'.
error: 1 dependencies of derivation '/nix/store/w63nsr7b2vi3xdg1x7wkz1j6pn3lhhhi-r-sva-3.18.0.drv' failed to build
error: 1 dependencies of derivation '/nix/store/mxxzgi669nzsg1ywymncclc2s7l9hm0g-r-SmartSVA-0.1.3.drv' failed to build
